--- a/deploy/roles/clickhouse/tasks/main.yml
+++ b/deploy/roles/clickhouse/tasks/main.yml
@@ -25,10 +25,9 @@
     image: "clickhouse/clickhouse-server:{{ clickhouse_version }}"
     restart_policy: unless-stopped
     state: started
+    recreate: true
     env:
-      CLICKHOUSE_DB: dango_prod
-      CLICKHOUSE_USER: "{{ clickhouse_user }}"
-      CLICKHOUSE_PASSWORD: "{{ clickhouse_password }}"
+      CLICKHOUSE_SKIP_USER_SETUP: "1"
     ports:
       - "127.0.0.1:8123:8123" # HTTP interface
       - "127.0.0.1:9000:9000" # Native TCP interface
