--- a/deploy/setup-github-runner-hosts.yml
+++ b/deploy/setup-github-runner-hosts.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Install required packages
       apt:
-        name: [curl, tar, pipx, python3, python3-pip]
+        name: [curl, tar, pipx, python3, python3-pip, python3-clickhouse-driver]
         update_cache: yes
 
     - name: Ensure '{{ runner_user }}' owns its home directory
