--- a/deploy/dango.yml
+++ b/deploy/dango.yml
@@ -5,6 +5,8 @@
     # default to the current commit SHA, but can be overridden using:
     # `ansible-playbook dango.yml -e dango_image_tag=latest`
     dango_image_tag: "{{ lookup('pipe','git rev-parse HEAD') }}"
+    ghcr_user: "{{ lookup('env','GITHUB_USER') }}"
+    ghcr_token: "{{ lookup('env','GITHUB_TOKEN') }}"
   collections:
     - community.docker
     - community.clickhouse
