--- a/deploy/roles/traefik/tasks/main.yml
+++ b/deploy/roles/traefik/tasks/main.yml
@@ -6,8 +6,9 @@
         traefik:
           image: traefik:v3.5
           ports:
-            - "8080:8080"
             - "{{ tailscale_ip }}:8888:8888"
+            # devnet
+            - "8080:8080"
             - "26656:26656"
             - "{{ tailscale_ip }}:26657:26657"
           labels:
@@ -21,6 +22,6 @@
             - --api.dashboard=true
             - --providers.docker=true
             - --entrypoints.dashboard.address=:8888
-            - --entrypoints.dango.address=:8080
-            - --entrypoints.cometbftp2p.address=:26656
-            - --entrypoints.cometbft.address=:26657
+            - --entrypoints.devnet-dango.address=:8080
+            - --entrypoints.devnet-cometbftp2p.address=:26656
+            - --entrypoints.devnet-cometbft.address=:26657
