--- a/deploy/roles/full-app/defaults/main.yml
+++ b/deploy/roles/full-app/defaults/main.yml
@@ -7,6 +7,7 @@ dango_clickhouse_name: "dango_production"
 dango_clickhouse_password: "{{ lookup('env','DANGO_CLICKHOUSE_PASSWORD') }}"
 clickhouse_user: "default"
 clickhouse_password: "{{ lookup('env','CLICKHOUSE_PASSWORD') }}"
+db_password: "{{ lookup('env','DB_PASSWORD') }}"
 db_pass: "{{ lookup('env','DB_PASSWORD') }}"
 db_user: "{{ lookup('env','DB_USER', default='postgres') }}"
 db_host: "127.0.0.1"
