--- a/indexer/clickhouse/Cargo.toml
+++ b/indexer/clickhouse/Cargo.toml
@@ -36,7 +36,7 @@ indexer-sql    = { workspace = true }
 itertools      = { workspace = true }
 metrics        = { workspace = true, optional = true }
 serde          = { workspace = true }
-serde_json     = { workspace = true, features = ["arbitrary_precision"] }
+serde_json     = { workspace = true }
 strum          = { workspace = true, features = ["derive"] }
 strum_macros   = { workspace = true }
 tempfile       = { workspace = true }
@@ -48,5 +48,4 @@ tracing        = { workspace = true, optional = true }
 [dev-dependencies]
 assertor   = { workspace = true }
 clickhouse = { workspace = true, features = ["test-util"] }
-serde_json = { workspace = true, features = ["arbitrary_precision"] }
 test-case  = { workspace = true }
