--- a/deploy/full-app.yml
+++ b/deploy/full-app.yml
@@ -9,7 +9,6 @@
     ghcr_token: "{{ lookup('env','GITHUB_TOKEN') }}"
     timestamp: "{{ ansible_date_time.year }}{{ ansible_date_time.month }}{{ ansible_date_time.day }}{{ ansible_date_time.hour }}{{ ansible_date_time.minute }}{{ ansible_date_time.second }}"
     deployment_name: "{% if pr_name is defined and pr_name != '' %}{{ pr_name }}-{% endif %}{{ timestamp }}"
-    dango_network: "devnet"
     COMETBFT_NODE_KEY: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_NODE_KEY') }}"
     COMETBFT_VALIDATOR_ADDRESS: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_VALIDATOR_ADDRESS') }}"
     COMETBFT_VALIDATOR_PUB_KEY: "{{ lookup('env', (dango_network|upper) ~ '_COMETBFT_VALIDATOR_PUB_KEY') }}"
@@ -17,6 +16,8 @@
     dango_host: "dango"
     cometbft_host: "cometbft"
     deploy_env: "staging"
+    chain_id: "dev-9"
+    dango_network: "devnet"
   collections:
     - community.docker
     - community.clickhouse
