Fix clickhouse healthcheck

--- a/deploy/roles/clickhouse/tasks/main.yml
+++ b/deploy/roles/clickhouse/tasks/main.yml
@@ -45,6 +45,10 @@
         [
           "CMD",
           "clickhouse-client",
+          "--user",
+          "default",
+          "--password",
+          "{{ clickhouse_password }}",
           "--query",
           "SELECT 1"
         ]
