--- a/deploy/roles/bots/tasks/main.yml
+++ b/deploy/roles/bots/tasks/main.yml
@@ -34,6 +34,11 @@
     networks:
       - name: "{{ dango_network }}_backend"
     tty: true
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:8082/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
   loop: "{{ dango_networks }}"
   loop_control:
     loop_var: dango_network
