Add port bindings

--- a/deploy/full-app.yml
+++ b/deploy/full-app.yml
@@ -2,8 +2,8 @@
   become: true
   become_user: "{{ deploy_user }}"
   vars:
-    # default to the current commit SHA, but can be overridden using:
-    # `ansible-playbook dango.yml -e dango_image_tag=latest`
+    tailscale_iface: tailscale0
+    tailscale_ip: "{{ hostvars[inventory_hostname]['ansible_' + tailscale_iface].ipv4.address }}"
     dango_image_tag: "{{ lookup('pipe','git rev-parse HEAD') }}"
     ghcr_user: "{{ lookup('env','GITHUB_USER') }}"
     ghcr_token: "{{ lookup('env','GITHUB_TOKEN') }}"
