--- a/docker/dango-frontend/Dockerfile
+++ b/docker/dango-frontend/Dockerfile
@@ -1,26 +1,17 @@
-FROM ubuntu:22.04 AS builder
-
-# Install Node.js 21 and dependencies
-RUN apt-get update && apt-get install -y \
-    curl \
-    ca-certificates \
-    libc++1 \
-    python3 \
-    make \
-    g++ \
-    git \
-    && curl -fsSL https://deb.nodesource.com/setup_21.x | bash - \
-    && apt-get install -y nodejs \
-    && rm -rf /var/lib/apt/lists/*
+FROM node:24-alpine AS builder
 
 # Install pnpm
 RUN corepack enable pnpm
 
-COPY . /app
+COPY ./sdk /app/sdk
+COPY ./ui /app/ui
+COPY ./package.json /app/package.json
+COPY ./pnpm-lock.yaml /app/pnpm-lock.yaml
+COPY ./pnpm-workspace.yaml /app/pnpm-workspace.yaml
+COPY ./turbo.json /app/turbo.json
+COPY ./.npmrc /app/.npmrc
 
 WORKDIR /app
-
-RUN ls /app
 
 # Need GITHUB_TOKEN for private packages
 ARG GITHUB_TOKEN
@@ -48,7 +39,7 @@ LABEL org.opencontainers.image.description="Dango frontend docker image"
 # LABEL org.opencontainers.image.revision=$GIT_COMMIT
 LABEL org.opencontainers.image.source="https://github.com/left-curve/left-curve"
 
-COPY --from=builder /app/ui/website/.vercel/output/static /usr/share/nginx/html
+COPY --from=builder /app/ui/portal/web/build /usr/share/nginx/html
 COPY docker/dango-frontend/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
