--- a/indexer/sql-migration/Cargo.toml
+++ b/indexer/sql-migration/Cargo.toml
@@ -10,3 +10,4 @@ path = "src/lib.rs"
 [dependencies]
 async-std         = { workspace = true }
 sea-orm-migration = { workspace = true }
+tokio             = { workspace = true }
