--- a/.github/workflows/portal-deployment.yaml
+++ b/.github/workflows/portal-deployment.yaml
@@ -133,7 +133,7 @@ jobs:
   push-manifest:
     permissions:
       packages: write
-    needs: [build]
+    needs: [docker-build]
     runs-on: [self-hosted]
     steps:
       - name: Log in to GHCR
