add tracing messages in dex contract

--- a/dango/genesis/Cargo.toml
+++ b/dango/genesis/Cargo.toml
@@ -16,7 +16,7 @@ dango-account-margin  = { workspace = true, features = ["library"] }
 dango-account-multi   = { workspace = true, features = ["library"] }
 dango-account-spot    = { workspace = true, features = ["library"] }
 dango-bank            = { workspace = true, features = ["library"] }
-dango-dex             = { workspace = true, features = ["library"] }
+dango-dex             = { workspace = true, features = ["library", "tracing"] }
 dango-gateway         = { workspace = true, features = ["library"] }
 dango-lending         = { workspace = true, features = ["library"] }
 dango-oracle          = { workspace = true, features = ["library"] }
