--- a/dango/dex/Cargo.toml
+++ b/dango/dex/Cargo.toml
@@ -16,6 +16,7 @@ crate-type = ["cdylib", "rlib"]
 # If enabled, Wasm exports won't be created. This allows this contract to be
 # imported into other contracts as a library.
 library = []
+tracing = ["dep:tracing"]
 
 [dependencies]
 anyhow                = { workspace = true }
@@ -23,6 +24,7 @@ dango-account-factory = { workspace = true, features = ["library"] }
 dango-oracle          = { workspace = true, features = ["library"] }
 dango-types           = { workspace = true }
 grug                  = { workspace = true }
+tracing               = { workspace = true, optional = true }
 
 [dev-dependencies]
 test-case = { workspace = true }
