--- a/ui/portal/web/tsconfig.json
+++ b/ui/portal/web/tsconfig.json
@@ -6,7 +6,7 @@
       "~/paraglide/*": ["./.paraglide/*"],
       "~/constants": ["./constants.config.ts"],
       "~/mock": ["./mockData.ts"],
-      "~/store": ["./store.config.dev.ts"],
+      "~/store": ["./store.config.ts"],
       "~/chartiq": ["./.chartiq.config.ts"]
     },
     "noEmit": true
