--- a/deploy/roles/loki/tasks/main.yml
+++ b/deploy/roles/loki/tasks/main.yml
@@ -1,37 +1,24 @@
-- name: Ensure loki dir exists
+- name: Ensure directories exists
   file:
-    path: "{{ loki_dir }}"
+    path: "{{ item }}"
     state: directory
     mode: '0755'
+  loop: ["{{ loki_dir }}/config", "{{ loki_dir }}/data"]
 
-- name: Ensure loki config dir exists
-  file:
-    path: "{{ loki_dir }}/config"
-    state: directory
-    mode: '0755'
+- name: Copy files
+  become: true
+  become_user: root
+  block:
+    - template:
+        src: "{{ item.src }}"
+        dest: "{{ item.dest }}"
+        owner: "{{ deploy_user }}"
+      loop:
+        - { src: "{{ playbook_dir }}/roles/loki/templates/loki-config.yml", dest: "{{ loki_dir }}/config/loki-config.yml" }
+        - { src: "{{ playbook_dir }}/roles/promtail/templates/promtail-config.yml", dest: "{{ loki_dir }}/config/promtail-config.yml" }
+        - { src: "{{ playbook_dir }}/roles/loki/templates/docker-compose.yml", dest: "{{ loki_dir }}/docker-compose.yml" }
 
-- name: Ensure loki data dir exists
-  file:
-    path: "{{ loki_dir }}/data"
-    state: directory
-    mode: '0755'
-
-- name: Copy loki config
-  template:
-    src: "{{ playbook_dir }}/roles/loki/templates/loki-config.yml"
-    dest: "{{ loki_dir }}/config/loki-config.yml"
-
-- name: Copy promtail config
-  template:
-    src: "{{ playbook_dir }}/roles/loki/templates/promtail-config.yml"
-    dest: "{{ loki_dir }}/config/promtail-config.yml"
-
-- name: Copy docker-compose
-  template:
-    src: "{{ playbook_dir }}/roles/loki/templates/docker-compose.yml"
-    dest: "{{ loki_dir }}/docker-compose.yml"
-
-- name: Launch Loki stack
+- name: Launch Loki
   community.docker.docker_compose_v2:
     project_src: "{{ loki_dir }}"
     pull: missing
