--- a/deploy/roles/loki/templates/docker-compose.yml
+++ b/deploy/roles/loki/templates/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   loki:
     image: grafana/loki:latest
+    user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
     container_name: loki
     command: -config.file=/etc/loki/local-config.yaml
     ports:
@@ -9,16 +10,9 @@ services:
       - ./config/loki-config.yml:/etc/loki/local-config.yaml
       - ./data:/tmp/loki
     restart: unless-stopped
-
-  promtail:
-    image: grafana/promtail:latest
-    container_name: promtail
-    command: -config.file=/etc/promtail/config.yml
-    ports:
-      - "{{ tailscale_ip }}:{{ promtail_port }}:9080"
-    volumes:
-      - ./config/promtail-config.yml:/etc/promtail/config.yml
-      - /var/log:/var/log:ro
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /var/run/docker.sock:/var/run/docker.sock
-    restart: unless-stopped
+    # curl isn't available, only wget
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3100/ready"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
