--- a/deploy/roles/loki/templates/loki-config.yml
+++ b/deploy/roles/loki/templates/loki-config.yml
@@ -25,19 +25,13 @@ query_range:
 
 schema_config:
   configs:
-    - from: 2020-10-24
-      store: boltdb-shipper
+    - from: 2024-04-01
+      store: tsdb
       object_store: filesystem
-      schema: v11
+      schema: v13
       index:
         prefix: index_
         period: 24h
-
-limits_config:
-  reject_old_samples: true
-  reject_old_samples_max_age: 168h
-  max_query_length: 12000h
-  max_query_parallelism: 32
 
 ruler:
   alertmanager_url: http://localhost:9093
