--- a/deploy/roles/prometheus/templates/docker-compose.yml
+++ b/deploy/roles/prometheus/templates/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   prometheus:
     image: prom/prometheus:latest
+    user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
     container_name: prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -18,9 +19,15 @@ services:
     restart: unless-stopped
     depends_on:
       - alertmanager
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9090/-/healthy"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   alertmanager:
     image: prom/alertmanager:latest
+    user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
     container_name: alertmanager
     command:
       - '--config.file=/etc/alertmanager/alertmanager.yml'
@@ -31,3 +38,8 @@ services:
       - ./config/alertmanager.yml:/etc/alertmanager/alertmanager.yml
       - ./alertmanager-data:/alertmanager
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9093/-/healthy"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
