--- a/deploy/roles/promtail/tasks/main.yml
+++ b/deploy/roles/promtail/tasks/main.yml
@@ -1,24 +1,21 @@
-- name: Ensure promtail dir exists
+- name: Ensure directories exists
   file:
-    path: "{{ promtail_dir }}"
+    path: "{{ item }}"
     state: directory
     mode: '0755'
+  loop: ["{{ promtail_dir }}/config"]
 
-- name: Ensure promtail config dir exists
-  file:
-    path: "{{ promtail_dir }}/config"
-    state: directory
-    mode: '0755'
-
-- name: Copy promtail config
-  template:
-    src: "{{ playbook_dir }}/roles/promtail/templates/promtail-config.yml"
-    dest: "{{ promtail_dir }}/config/promtail-config.yml"
-
-- name: Copy docker-compose
-  template:
-    src: "{{ playbook_dir }}/roles/promtail/templates/docker-compose.yml"
-    dest: "{{ promtail_dir }}/docker-compose.yml"
+- name: Copy files
+  become: true
+  become_user: root
+  block:
+    - template:
+        src: "{{ item.src }}"
+        dest: "{{ item.dest }}"
+        owner: "{{ deploy_user }}"
+      loop:
+        - { src: "{{ playbook_dir }}/roles/promtail/templates/promtail-config.yml", dest: "{{ promtail_dir }}/config/promtail-config.yml" }
+        - { src: "{{ playbook_dir }}/roles/promtail/templates/docker-compose.yml", dest: "{{ promtail_dir }}/docker-compose.yml" }
 
 - name: Launch Promtail
   community.docker.docker_compose_v2:
