--- a/deploy/roles/promtail/templates/docker-compose.yml
+++ b/deploy/roles/promtail/templates/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   promtail:
     image: grafana/promtail:latest
+    user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
     container_name: promtail
     command: -config.file=/etc/promtail/config.yml
     ports:
@@ -10,5 +11,10 @@ services:
       - /var/log:/var/log:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
       - /var/run/docker.sock:/var/run/docker.sock
-      - "{{ ansible_env.HOME }}:/home/logs:ro"
     restart: unless-stopped
+    # Sadly curl nor wget are available
+    healthcheck:
+      test: ["CMD", "pgrep", "-f", "promtail"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
