--- a/deploy/monitoring.yml
+++ b/deploy/monitoring.yml
@@ -4,6 +4,7 @@
   vars:
     tailscale_iface: tailscale0
     tailscale_ip: "{{ hostvars[inventory_hostname]['ansible_' + tailscale_iface].ipv4.address }}"
+    discord_webhook: "{{ lookup('env','DISCORD_WEBHOOK') }}"
   roles:
     - prometheus
     - loki
