--- a/deploy/group_vars/all.yml
+++ b/deploy/group_vars/all.yml
@@ -8,6 +8,7 @@ ports:
   testnet:
     dango_port: 8080
     faucet_port: 8082
+    cometbft_metrics_port: 26660
     cometbft_p2p_port: 26656
     cometbft_rpc_port: 26657
     chain_id: "dev-6"
@@ -15,6 +16,7 @@ ports:
   devnet:
     dango_port: 8080
     faucet_port: 8082
+    cometbft_metrics_port: 26660
     cometbft_p2p_port: 26656
     cometbft_rpc_port: 26657
     chain_id: "dev-9"
@@ -23,6 +25,7 @@ ports:
 # in summary cometbft needs to expose:
 # 26656, to anyone
 # 26657, to tailscale
+# 26660, to tailscale (metrics)
 # dango needs to expose:
 # 8080, to anyone
 # 26658, to cometbft container only
