--- a/ui/portal/web/package.json
+++ b/ui/portal/web/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@inlang/paraglide-js": "2.0.0-beta.30",
     "@left-curve/applets-kit": "workspace:^",
+    "@left-curve/chartiq": "^9.8.0",
     "@left-curve/dango": "workspace:^",
     "@left-curve/store": "workspace:^",
     "@left-curve/ui-config": "workspace:^",
+    "@monaco-editor/react": "^4.7.0",
     "@sentry/react": "^9.10.1",
     "@sentry/webpack-plugin": "^3.2.4",
     "@tanstack/react-query": "catalog:",
@@ -22,7 +24,6 @@
     "@tanstack/zod-adapter": "catalog:",
     "@yudiel/react-qr-scanner": "^2.2.1",
     "big.js": "^7.0.1",
-    "@left-curve/chartiq": "^9.8.0",
     "date-fns": "^4.1.0",
     "framer-motion": "catalog:",
     "fuzzysort": "^3.1.0",
