--- a/deploy/roles/grafana/templates/docker-compose.yml
+++ b/deploy/roles/grafana/templates/docker-compose.yml
@@ -21,3 +21,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+
+networks:
+  default:
+    name: monitoring
+    external: true
