--- a/deploy/roles/promtail/templates/docker-compose.yml
+++ b/deploy/roles/promtail/templates/docker-compose.yml
@@ -18,3 +18,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+
+networks:
+  default:
+    name: monitoring
+    external: true
