--- a/deploy/playbook.yml
+++ b/deploy/playbook.yml
@@ -1,5 +1,8 @@
 - hosts: all
   become: true
+  vars:
+    tailscale_iface: tailscale0
+    tailscale_ip: "{{ hostvars[inventory_hostname]['ansible_' + tailscale_iface].ipv4.address }}"
   roles:
     - common
     - users
