--- a/deploy/promtail.yml
+++ b/deploy/promtail.yml
@@ -1,18 +1,13 @@
-- hosts: monitoring
+- hosts: all
   become: true
-  become_user: "{{ deploy_user }}"
   vars:
     tailscale_iface: tailscale0
     tailscale_ip: "{{ hostvars[inventory_hostname]['ansible_' + tailscale_iface].ipv4.address }}"
-    discord_webhook: "{{ lookup('env','DISCORD_WEBHOOK') }}"
-    loki_url: "http://loki:3100"
   pre_tasks:
     - name: Create monitoring network
       community.docker.docker_network:
         name: monitoring
         state: present
   roles:
-    - prometheus
-    - loki
+    - node-exporter
     - promtail
-    - grafana
