--- a/deploy/roles/loki/templates/docker-compose.yml
+++ b/deploy/roles/loki/templates/docker-compose.yml
@@ -16,3 +16,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+
+networks:
+  default:
+    name: monitoring
+    external: true
