--- a/deploy/roles/node-exporter/tasks/main.yml
+++ b/deploy/roles/node-exporter/tasks/main.yml
@@ -4,13 +4,20 @@
     state: directory
     mode: '0755'
 
-- name: Copy docker-compose
-  template:
-    src: "{{ playbook_dir }}/roles/node-exporter/templates/docker-compose.yml"
-    dest: "{{ node_exporter_dir }}/docker-compose.yml"
+- name: Copy files
+  become: true
+  become_user: root
+  block:
+    - template:
+        src: "{{ item.src }}"
+        dest: "{{ item.dest }}"
+        owner: "{{ deploy_user }}"
+      loop:
+        - { src: "{{ playbook_dir }}/roles/node-exporter/templates/docker-compose.yml", dest: "{{ node_exporter_dir }}/docker-compose.yml" }
 
 - name: Launch Node Exporter
   community.docker.docker_compose_v2:
     project_src: "{{ node_exporter_dir }}"
     pull: missing
     state: present
+    recreate: always
