--- a/deploy/roles/dango/templates/devnet/config/app.toml
+++ b/deploy/roles/dango/templates/devnet/config/app.toml
@@ -5,7 +5,7 @@
 log_level = "info"
 
 # Logging format: text|json.
-log_format = "text"
+log_format = "json"
 
 ################################################################################
 ###                            Grug Configuration                            ###
