--- a/deploy/roles/promtail/templates/docker-compose.yml
+++ b/deploy/roles/promtail/templates/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   promtail:
     image: grafana/promtail:latest
-    user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
+    # user: "{{ ansible_user_uid }}:{{ ansible_user_gid }}"
     container_name: promtail
     command: -config.file=/etc/promtail/config.yml
     ports:
