--- a/deploy/promtail.yml
+++ b/deploy/promtail.yml
@@ -1,5 +1,6 @@
 - hosts: all
   become: true
+  become_user: "{{ deploy_user }}"
   vars:
     tailscale_iface: tailscale0
     tailscale_ip: "{{ hostvars[inventory_hostname]['ansible_' + tailscale_iface].ipv4.address }}"
