--- a/deploy/roles/grafana/templates/grafana.ini
+++ b/deploy/roles/grafana/templates/grafana.ini
@@ -2,9 +2,13 @@
 http_port = 3000
 domain = {{ tailscale_ip }}
 
-[security]
-admin_user = {{ grafana_admin_user }}
-admin_password = {{ grafana_admin_password }}
+[auth.anonymous]
+enabled = true
+org_role = Admin
+
+# [security]
+# admin_user = {{ grafana_admin_user }}
+# admin_password = {{ grafana_admin_password }}
 
 [users]
 allow_sign_up = false
