--- a/deploy/roles/loki/templates/loki-config.yml
+++ b/deploy/roles/loki/templates/loki-config.yml
@@ -1,5 +1,10 @@
 auth_enabled: false
 
+limits_config:
+  reject_old_samples: false  # Allow old entries
+  # Or increase window:
+  # reject_old_samples_max_age: 720h  # 30 days
+
 server:
   http_listen_port: 3100
   grpc_listen_port: 9096
