--- a/ui/website/biome.json
+++ b/ui/website/biome.json
@@ -1,5 +1,6 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+  "root": false,
+  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
   "extends": ["@left-curve/config/biome/common"],
   "linter": {
     "rules": {
