add dex reserver tracking script

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -140,6 +140,7 @@ k256                        = "0.13"
 lzma-rs                     = "0.3"
 metrics                     = "0.24"
 metrics-exporter-prometheus = "0.17"
+num-format                  = "0.4"
 num_cpus                    = "1"
 p256                        = "0.13"
 paste                       = "1"
