--- a/biome.json
+++ b/biome.json
@@ -1,4 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-  "extends": ["sdk/config/biome/common.json"]
+  "root": true,
+  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
+  "extends": ["./sdk/config/biome/common.json"]
 }
