--- a/turbo.json
+++ b/turbo.json
@@ -33,6 +33,7 @@
     "PUBLIC_SENTRY_DSN",
     "SENTRY_ORG",
     "SENTRY_PROJECT",
-    "SENTRY_AUTH_TOKEN"
+    "SENTRY_AUTH_TOKEN",
+    "GITHUB_TOKEN"
   ]
 }
