--- a/ui/applets/kit/biome.json
+++ b/ui/applets/kit/biome.json
@@ -1,10 +1,11 @@
 {
   "root": false,
   "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
-  "extends": ["@left-curve/config/biome/common"],
+  "extends": ["@left-curve/config/biome/common.json"],
   "linter": {
     "rules": {
       "a11y": {
+        "noStaticElementInteractions": "off",
         "noSvgWithoutTitle": "off",
         "useKeyWithClickEvents": "off"
       }
