--- a/ui/store/biome.json
+++ b/ui/store/biome.json
@@ -1,5 +1,18 @@
 {
   "root": false,
   "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
-  "extends": ["@left-curve/config/biome/common"]
+  "extends": ["@left-curve/config/biome/common.json"],
+  "linter": {
+    "rules": {
+      "correctness": {
+        "useExhaustiveDependencies": "off",
+        "noUnusedVariables": {
+          "level": "warn",
+          "options": {
+            "ignoreRestSiblings": true
+          }
+        }
+      }
+    }
+  }
 }
